header and footer completed, google search section aligned correctly but needs some styling.

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,10 +49,12 @@ header {
 }
 
 a#sign-in {
-  background-color: blue;
+  background-color: #4285f4;
   color: white;
   padding: 10px;
   border-radius: 2px;
+  font-weight: 600;
+  font-size: 1em;
 }
 
 a#sign-in:hover {
@@ -61,30 +63,52 @@ a#sign-in:hover {
 
 section#main {
   width: 100%;
-  background-color: yellow;
+  /* background-color: yellow; */
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+#center {
+  display: flex;
+  flex-direction: column;
+}
+
+#google-image {
+  align-self: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.buttons {
+  margin: 10px 0;
+}
+
 #search-form,
 #sentence {
-  width: 50px;
+  /* width: 50px;
   height: 20px;
-  background-color: pink;
+  background-color: pink; */
+  text-align: center;
+  margin: 10px 0;
 }
 
 footer {
   width: 100%;
   height: 20px;
-  background-color: yellow;
+  /* background-color: yellow; */
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 10px 0;
+  font-size: 0.9em;
 }
 
 .footer-item {
-  width: 50px;
-  height: 20px;
-  background-color: pink;
+  /* background-color: pink; */
+  padding: 2px 10px;
 }
